fix: remove some left and right margine to eliminate horizontal scroll on mobile devices

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,7 +34,7 @@ p, th, td, a, label {
 h1, h2, h3, h4 {
     font-family: 'Amatic SC', cursive;
     color: rgb(184, 203, 213);
-    margin: 0.5rem;
+    margin: 0.5rem 0 0.5rem 0;
 }
 
 h1 {
@@ -298,7 +298,7 @@ footer a:hover {
     #nav-list li {
         display: block;
         text-align: center;
-        margin: 0.2rem;
+        margin: 0.2rem 0 0.2rem 0;
     }
 
     /* Mobile styles for the About section */
